# hoops-game

./: .gitignore  README.md  RUNNING.md  hoops.spec  pyproject.toml
.github/: RELEASE_NOTES.md
.github/workflows/: build.yml
data/brackets/wbb/: 2015-16.json  2016-17.json  2017-18.json  2018-19.json  2020-21.json  2021-22.json  2022-23.json  2023-24.json  2024-25.json  2025-26.json
data/games/wbb/: 2015-16.parquet  2016-17.parquet  2017-18.parquet  2018-19.parquet  2019-20.parquet  2020-21.parquet  2021-22.parquet  2022-23.parquet  2023-24.parquet  2024-25.parquet  2025-26.parquet
data/players/wbb/: 2015-16.parquet  2016-17.parquet  2017-18.parquet  2018-19.parquet  2019-20.parquet  2020-21.parquet  2021-22.parquet  2022-23.parquet  2023-24.parquet  (+2 more)
data/rules/: wbb.yaml
scripts/: build_executable.sh  extract_brackets.py  extract_conf_tournaments.py  fit_distributions.py  ingest_wehoop.py  project_players.py  validate_engine.py
src/hoops/: __init__.py  cli.py  league.py  rules.py
tests/unit/: test_bracket_screens.py  test_brackets.py  test_cli.py  test_cpu_coach.py  test_engine.py  test_fatigue.py  test_fitted_seasons.py  test_fouls.py  test_hca.py  test_interactive.py  test_lineup.py  test_lineup_rates.py  test_off_scheme.py  test_playback.py  test_player_projections.py  test_policy.py  test_rosters_and_attribution.py  test_rules.py  test_save.py  test_scheme_affinity.py  test_seasons.py  test_tournament.py  test_tournament_app.py  test_ui_app.py  test_ui_picker.py  test_ui_subs.py
tests/validation/: test_phase2_priors.py  test_phase4_season.py
(+306 files in other folders)
