[project]
name = "hoops"
version = "0.0.1"
description = "Terminal coaching simulator for women's college basketball, 2015-16 onward."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Derek Willis" }]

dependencies = [
    # sportsdataverse-py would be the obvious choice, but its package init
    # transitively imports xgboost (via cfb) which needs libomp on macOS, and
    # it also depends on pkg_resources which was removed in setuptools 81.
    # We read the same Parquet release artifacts directly via polars instead.
    "polars>=1.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "textual>=0.70",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "ruff>=0.5",
]

[project.scripts]
hoops = "hoops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hoops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running validation runs (excluded from default run)",
]
addopts = "-m 'not slow'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
